# symbolic-memory-graph

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  llm_integration.cpp  simple_graph.cpp
include/memory_graph/: edge.hpp  exceptions.hpp  memory_graph.hpp  node.hpp
include/memory_graph/utils/: serialization.hpp  traversal.hpp
src/: CMakeLists.txt
src/memory_graph/: edge.cpp  memory_graph.cpp  node.cpp
src/memory_graph/utils/: serialization.cpp  traversal.cpp
tests/: CMakeLists.txt  test_edge.cpp  test_memory_graph.cpp  test_node.cpp  test_serialization.cpp  test_utils.hpp
